--- a/src/inputfile/Styles.module.css
+++ b/src/inputfile/Styles.module.css
@@ -2,6 +2,12 @@
   margin-right: 7px;
 }
 
+.errorMsg {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  color: #ff7474;
+}
+
 .inputContainer {
   display: flex;
   width: 100%;
